set dependencies, api interface and data classes for recipes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">mydietbud</string>
+    <string name="my_apiKey">68ba0ea76ba749ec806b6770d7e498ee</string>
 </resources>
